refacto: clean up eric weird hidden characters (#61)

--- a/pages/startups/code-du-travail-numerique/kickoff.mdx
+++ b/pages/startups/code-du-travail-numerique/kickoff.mdx
@@ -12,7 +12,7 @@ Pour faire face à au challenge du [code du travail numérique](./genese), nous 
 
 ## Immersions, rencontres
 
-La première phase de la démarche des "startups d'état", consiste à se rapprocher de nos usagers potentiels, en immersion au sein des services locaux comme nous avons pû le faire dans différentes <span data-tip="Directions régionales des entreprises, de la concurrence, du travail et de l’emploi">DIRECCTE</span> par exemple.
+La première phase de la démarche des "startups d'état", consiste à se rapprocher de nos usagers potentiels, en immersion au sein des services locaux comme nous avons pû le faire dans différentes <span data-tip="Directions régionales des entreprises, de la concurrence, du travail et de l'emploi">DIRECCTE</span> par exemple.
 
 Ces rencontres nous ont montré l'importance [des services de renseignement locaux](http://direccte.gouv.fr/) et le rôle important que ces personnels jouent dans la relation usager en apportant soutien et expertise, et une mediation parfois nécessaire en droit du travail.
 
