--- a/pages/startups/code-du-travail-numerique/ux.mdx
+++ b/pages/startups/code-du-travail-numerique/ux.mdx
@@ -1,10 +1,10 @@
 import { LayoutCDTN } from "../../../src/composants";
 
-export const meta = { title: 'Mise en place d’une démarche UX', date: "23 août 2018" }
+export const meta = { title: 'Mise en place d'une démarche UX', date: "23 août 2018" }
 
 <LayoutCDTN meta={meta}>
 
-# La mise en place d’une démarche UX
+# La mise en place d'une démarche UX
 
 ##  Le premier test utilisateur
 
@@ -14,46 +14,46 @@ Début juillet, nous testons un premier prototype fonctionnel en situation, dans
 
 ![Homepage V0](/static/images/startups/code-du-travail-numerique/ux/homepage-v0.png)
 
-Ce premier test est riche d’enseignements :
+Ce premier test est riche d'enseignements :
 
-- Malgré un moteur de recherche performant, et plusieurs sources de données croisées, il est difficile pour les usagers non experts de mettre des mots ou de formaliser correctement la question qu’ils se posent.
+- Malgré un moteur de recherche performant, et plusieurs sources de données croisées, il est difficile pour les usagers non experts de mettre des mots ou de formaliser correctement la question qu'ils se posent.
 
-- Pour une problématique donnée - _ex: « Je conteste mon licenciement »_, plusieurs réponses sont souvent nécessaires : _Quels sont les motifs valables d’un licenciement ? La procédure de licenciement a-t-elle été respectée ? Comment instruire un dossier aux prud’hommes ?…_
+- Pour une problématique donnée - _ex: « Je conteste mon licenciement »_, plusieurs réponses sont souvent nécessaires : _Quels sont les motifs valables d'un licenciement ? La procédure de licenciement a-t-elle été respectée ? Comment instruire un dossier aux prud'hommes ?…_
 
-Il soulève également des questions d’organisation :
+Il soulève également des questions d'organisation :
 
 - Chaque nouvelle idée ou fonctionnalité doit être formalisée, intégrée et développée avant de pouvoir être validée (ou rejetée) par des tests utilisateurs.
 
-- Le code du travail est complexe et les questions des usagers parfois très spécifiques. Tester un changement d’arborescence ou d’organisation des contenus (taxonomies, catégories) peut être très fastidieux.
+- Le code du travail est complexe et les questions des usagers parfois très spécifiques. Tester un changement d'arborescence ou d'organisation des contenus (taxonomies, catégories) peut être très fastidieux.
 
 - Nous avons besoin de pouvoir expérimenter et tester plus rapidement et simplement nos hypothèses et nos idées. Et d'obtenir des retours d'usagers avant d'engager des développements techniques.
 
 
 ## Les personas : pour apprendre à connaître nos usagers
 
-Certains publics cibles de l’application sont assez évidents : salarié, employeur… Mais tout au long du projet, nous découvrons des usages et types de questions potentiellement très variés :
+Certains publics cibles de l'application sont assez évidents : salarié, employeur… Mais tout au long du projet, nous découvrons des usages et types de questions potentiellement très variés :
 
-- Par **profil** : salarié, employeur, assistantes maternelles, particuliers employeurs, métiers support (RH, comptable), stagiaires ou jobs d’été…
+- Par **profil** : salarié, employeur, assistantes maternelles, particuliers employeurs, métiers support (RH, comptable), stagiaires ou jobs d'été…
 
-- Par **niveau d’expertise** en droit du travail : _« Mon patron veut me virer »_ / _« Mon patron peut-il modifier les journées travaillées de mon temps partiel ? »_ / _«  Que dit la convention Syntec sur la rémunération des heures supplémentaires pour les agents de maîtrise ? »_
+- Par **niveau d'expertise** en droit du travail : _« Mon patron veut me virer »_ / _« Mon patron peut-il modifier les journées travaillées de mon temps partiel ? »_ / _«  Que dit la convention Syntec sur la rémunération des heures supplémentaires pour les agents de maîtrise ? »_
 
-- Par **l’urgence**, ou **l’anxiété** que génère une situation : _« J’ai peur que mon patron me licencie », « Je dois embaucher une nounou d’ici la rentrée », «  Mon activité va mal, dois-je licencier des employés ?»  _
+- Par **l'urgence**, ou **l'anxiété** que génère une situation : _« J'ai peur que mon patron me licencie », « Je dois embaucher une nounou d'ici la rentrée », «  Mon activité va mal, dois-je licencier des employés ?»  _
 
-Première étape : affiner et formaliser les personas imaginés à la création du projet pour couvrir l’ensemble des usages de l’application. Ils évolueront avec le projet et la découverte de nouveaux besoins.
+Première étape : affiner et formaliser les personas imaginés à la création du projet pour couvrir l'ensemble des usages de l'application. Ils évolueront avec le projet et la découverte de nouveaux besoins.
 
 _Jeanne_, l'un de nos personas :
 ![Jeanne](/static/images/startups/code-du-travail-numerique/personas/jeanne.png)
 
 
-En donnant vie à ces personas, avec une biographie, une photo, des objectifs, il devient plus facile de se projeter à chaque étape du projet, d’imaginer leurs frustrations, et les fonctionnalités importantes qui pourront les aider à trouver leurs réponses.
+En donnant vie à ces personas, avec une biographie, une photo, des objectifs, il devient plus facile de se projeter à chaque étape du projet, d'imaginer leurs frustrations, et les fonctionnalités importantes qui pourront les aider à trouver leurs réponses.
 
-Lors de tests utilisateurs, ou d’évolutions de l’outil, nous pourrons également valider que nous n’avons oublié personne en chemin.
+Lors de tests utilisateurs, ou d'évolutions de l'outil, nous pourrons également valider que nous n'avons oublié personne en chemin.
 
 
 
 ## Les wireframes : pour formaliser nos idées
 
-Les [wireframes](https://fr.wikipedia.org/wiki/Wireframe_(design)) (ou mock-ups) sont des maquettes en noir & blanc représentant l'organisation des contenus et composants d'une page web ou mobile. Ils nous permettent de formaliser nos idées et de nous projeter visuellement sur le résultat attendu. Les tests utilisateurs et les personas nous donnent déjà de bonnes intuitions et pistes d’amélioration :
+Les [wireframes](https://fr.wikipedia.org/wiki/Wireframe_(design)) (ou mock-ups) sont des maquettes en noir & blanc représentant l'organisation des contenus et composants d'une page web ou mobile. Ils nous permettent de formaliser nos idées et de nous projeter visuellement sur le résultat attendu. Les tests utilisateurs et les personas nous donnent déjà de bonnes intuitions et pistes d'amélioration :
 
 Pour accompagner les **usagers néophytes** (en droit, ou en web) :
 - Mettre en valeur les thèmes les plus recherchés
@@ -76,11 +76,11 @@ _Le wireframe d'une nouvelle page d'accueil_
 
 ## Prototype interactif
 
-Pour valider ces hypothèses auprès d’utilisateurs, l'idéal est de proposer un prototype interactif et d'observer leur navigation en conditions réelles (sur écran ou tablette).
+Pour valider ces hypothèses auprès d'utilisateurs, l'idéal est de proposer un prototype interactif et d'observer leur navigation en conditions réelles (sur écran ou tablette).
 
-Comme nous ne pouvons pas réaliser de wireframes pour _tous_ les cas de recherche, on choisit généralement un (ou plusieurs) scénario de test, en précisant un contexte _« Vos conditions de travail se sont détériorées ces derniers mois, et vous craignez que des licenciements soient annoncés prochainement »_, et un objectif _« Vous aimeriez trouver quels sont les motifs légaux envisageables lors d'un licenciement »_.
+Comme nous ne pouvons pas réaliser de wireframes pour _tous_ les cas de recherche, on choisit généralement un (ou plusieurs) scénario de test, en précisant un contexte _« Vos conditions de travail se sont détériorées ces derniers mois, et vous craignez que des licenciements soient annoncés prochainement »_, et un objectif _« Vous aimeriez trouver quels sont les motifs légaux envisageables lors d'un licenciement »_.
 
-Beaucoup d’outils permettent de créer assez simplement un prototype cliquable. Le format PDF cliquable a l’avantage d’être un format d’export standard (Powerpoint, Keynote…) et de pouvoir être testé sur le web comme sur mobile. Pour le code du travail numérique, nous avons opté pour [Invisionapp](https://www.invisionapp.com/), intégré au logiciel de conception [Sketch](https://www.sketchapp.com/) grâce au plugin [Craft](https://www.invisionapp.com/craft).
+Beaucoup d'outils permettent de créer assez simplement un prototype cliquable. Le format PDF cliquable a l'avantage d'être un format d'export standard (Powerpoint, Keynote…) et de pouvoir être testé sur le web comme sur mobile. Pour le code du travail numérique, nous avons opté pour [Invisionapp](https://www.invisionapp.com/), intégré au logiciel de conception [Sketch](https://www.sketchapp.com/) grâce au plugin [Craft](https://www.invisionapp.com/craft).
 
 [Découvrez le prototype interactif du code du travail numérique](https://invis.io/DBMWXF74F2G#/308308616_Home)
 
