--- a/pages/startups/e-mjpm.mdx
+++ b/pages/startups/e-mjpm.mdx
@@ -12,21 +12,21 @@ export const meta = {
 
 <LayoutArticle meta={meta} startup="e-mjpm">
 
-Aujourd’hui, la France compte **entre 800 000 et 1 million de personnes sous mesure de protection** (tutelle, curatelle, sauvegarde de justice). Chaque année plusieurs milliers de personnes majeures sont nouvellement concernés.
+Aujourd'hui, la France compte **entre 800 000 et 1 million de personnes sous mesure de protection** (tutelle, curatelle, sauvegarde de justice). Chaque année plusieurs milliers de personnes majeures sont nouvellement concernés.
 
-Ces dernières, dans l’impossibilité de pourvoir seules à leurs intérêts (à cause d’une altération de leur faculté mentale ou corporelle) ont besoin d’être assistées ou représentées par un proche ou un professionnel.
+Ces dernières, dans l'impossibilité de pourvoir seules à leurs intérêts (à cause d'une altération de leur faculté mentale ou corporelle) ont besoin d'être assistées ou représentées par un proche ou un professionnel.
 
-Aujourd’hui les juges attribuent les mesures de protection sans avoir connaissance en temps réel de l’activité des travailleurs sociaux et de leur zone d’intervention géographique. La personne à protéger n’a donc pas systématiquement une prise en charge optimale.
+Aujourd'hui les juges attribuent les mesures de protection sans avoir connaissance en temps réel de l'activité des travailleurs sociaux et de leur zone d'intervention géographique. La personne à protéger n'a donc pas systématiquement une prise en charge optimale.
 
-Concrètement un travailleur social peut passer trop de temps pour se rendre chez la personne au détriment de son accompagnement. Un professionnel surchargé peut être mobilisé pour un accompagnement alors qu’un homologue plus près de la personne serait disponible…
+Concrètement un travailleur social peut passer trop de temps pour se rendre chez la personne au détriment de son accompagnement. Un professionnel surchargé peut être mobilisé pour un accompagnement alors qu'un homologue plus près de la personne serait disponible…
 
-Avec e-MJPM, le magistrat pourra **choisir au mieux le professionnel qui sera en charge de la mesure** (tutelle, curatelle, sauvegarde de justice) sur la base d’un référentiel géolocalisé des mandataires.
+Avec e-MJPM, le magistrat pourra **choisir au mieux le professionnel qui sera en charge de la mesure** (tutelle, curatelle, sauvegarde de justice) sur la base d'un référentiel géolocalisé des mandataires.
 
-Ce service consolidera ainsi une base de données des mesures en cours sur le territoire. Ces données ont une valeur essentielle dans le pilotage de la politique publique de la protection juridique des majeurs (connaître le profil des personnes sous protection, adapter l’offre des mandataires aux spécificités du territoire, …).
+Ce service consolidera ainsi une base de données des mesures en cours sur le territoire. Ces données ont une valeur essentielle dans le pilotage de la politique publique de la protection juridique des majeurs (connaître le profil des personnes sous protection, adapter l'offre des mandataires aux spécificités du territoire, …).
 
 Le service numérique a été testé dans un premier temps sur le Nord Pas de Calais en associant les magistrats et les professionnels mobilisés. **Le déploiement sera engagé au fur et à mesure** sur de nouveaux territoires, en partenariat avec le ministère de la Justice.
 
-Le rapport de la Cour des Comptes 2016 sur la protection juridique des majeurs confirme l’**insuffisance des outils actuels dans la gestion des mesures de protection**.
+Le rapport de la Cour des Comptes 2016 sur la protection juridique des majeurs confirme l'**insuffisance des outils actuels dans la gestion des mesures de protection**.
 
 e-MJPM est une première réponse pour une meilleure gestion des mesures de protection et a pour objectif de simplifier à terme toutes les démarches des professionnels en charge de la protection juridique des majeurs.
 
