fix: use double quotes

--- a/pages/startups/code-du-travail-numerique/ux.mdx
+++ b/pages/startups/code-du-travail-numerique/ux.mdx
@@ -1,6 +1,6 @@
 import { LayoutCDTN } from "../../../src/composants";
 
-export const meta = { title: 'Mise en place d'une démarche UX', date: "23 août 2018" }
+export const meta = { title: "Mise en place d'une démarche UX", date: "23 août 2018" }
 
 <LayoutCDTN meta={meta}>
 
