fix: mix quotes

--- a/pages/startups/work-in-france.mdx
+++ b/pages/startups/work-in-france.mdx
@@ -1,10 +1,10 @@
 import { LayoutArticle } from "../../src/composants";
 
 export const meta = {
-  title: 'La plateforme de demande d'autorisations provisoires de travail',
+  title: "La plateforme de demande d'autorisations provisoires de travail",
   hero: {
-    background: '/static/images/startups/bruno-abatti-120376-unsplash.jpg',
-    alt:'Photo by Bruno Abatti',
+    background: "/static/images/startups/bruno-abatti-120376-unsplash.jpg",
+    alt: "Photo by Bruno Abatti",
     title: "Work in France",
     tagline: "La plateforme de demande d'autorisations provisoires de travail"
   }
