fix: lots of little mistakes

--- a/pages/startups/code-du-travail-numerique/genese.mdx
+++ b/pages/startups/code-du-travail-numerique/genese.mdx
@@ -1,6 +1,6 @@
 import { LayoutCDTN } from "../../../src/composants";
 
-export const meta = { title: 'Genèse du code du travail numérique' }
+export const meta = { title: "Genèse du code du travail numérique" }
 
 <LayoutCDTN meta={meta}>
 
