--- a/pages/startups/e-mjpm.mdx
+++ b/pages/startups/e-mjpm.mdx
@@ -1,10 +1,10 @@
 import { BlocCards, LayoutArticle, StartupMembers } from "../../src/composants";
 
 export const meta = {
-  title: 'Trouver rapidement le bon professionnel pour les majeurs à protéger',
+  title: "Trouver rapidement le bon professionnel pour les majeurs à protéger",
   hero: {
-    background: '/static/images/startups/harli-marten-135841-unsplash.jpg',
-    alt:'Photo by Harli Marten',
+    background: "/static/images/startups/harli-marten-135841-unsplash.jpg",
+    alt: "Photo by Harli Marten",
     title: "e-MJPM",
     tagline: "Trouver rapidement le bon professionnel pour les majeurs à protéger"
   }
